# custom-copilotkit-python-sdk

./: .gitignore  README.md  pyproject.toml
copilotkit_sdk/: README.md  pyproject.toml  pytest.ini
copilotkit_sdk/copilotkit/: __init__.py  action.py  agent.py  exc.py  html.py  langgraph.py  langgraph_agent.py  langgraph_agui_agent.py  logging.py  parameter.py  protocol.py  runloop.py  sdk.py  types.py  utils.py
copilotkit_sdk/copilotkit/crewai/: __init__.py
copilotkit_sdk/copilotkit/integrations/: fastapi.py
copilotkit_sdk/tests/: conftest.py
copilotkit_sdk/tests/fixtures/: sample_actions.py  sample_configs.py  sample_graphs.py  sample_messages.py
copilotkit_sdk/tests/test_langgraph_v1_compatibility/: test_core_apis.py
docs/: CODE_NAVIGATION.md  CUSTOMIZATIONS.md  LANGGRAPH_V1_COMPATIBILITY.md  TEST_PLAN.md  UPSTREAM_SYNC.md
src/: main.py
