[project]
name = "online-seminar"
version = "0.1.0"
description = "Online seminar project with customized CopilotKit SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Local customized CopilotKit SDK
    "copilotkit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/online_seminar"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "faker>=20.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "faker>=20.0.0",
]

[tool.uv.sources]
# Use local customized SDK instead of PyPI
copilotkit = { path = "copilotkit_sdk", editable = true }
