[tool.poetry]
name = "copilotkit"
version = "0.1.70"
description = "CopilotKit python SDK"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://copilotkit.ai"
repository = "https://github.com/CopilotKit/CopilotKit/tree/main/sdk-python"
keywords = ["copilot", "copilotkit", "langgraph", "langchain", "ai", "langsmith", "langserve"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
langgraph = {version = ">=0.3.25,<1.1.0"}
langchain = {version = ">=0.3.0"}
# CUSTOMIZATION: CrewAI dependency disabled - focusing on LangGraph only
# crewai = { version = "0.118.0", optional = true }
ag-ui-langgraph = { version = "0.0.18", extras = ["fastapi"] }
fastapi = "^0.115.0"
partialjson = "^0.0.8"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.25.0"
faker = "^20.0.0"

# CUSTOMIZATION: CrewAI extras disabled
# [tool.poetry.extras]
# crewai = ["crewai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
